color and theme changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&family=Lato:wght@400;700&display=swap"
     rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet"> 
     <script
     src="https://kit.fontawesome.com/df32aef9b3.js"
     crossorigin="anonymous"
